licenses(["notice"])  # Apache License 2.0

exports_files(["WORKSPACE"])

filegroup(
    name = "distdocs",
    srcs = [
        "AUTHORS",
        "CONTRIBUTING.md",
        "CONTRIBUTORS",
        "INSTALL.md",
        "LICENSE",
        "NEWS.md",
        "README.md",
    ],
    visibility = ["//admin/install:__pkg__"],
)
