licenses(["notice"])  # Apache License 2.0

# gazelle:resolve go github.com/bazelbuild/rules_go/go/tools/bazel @io_bazel_rules_go//go/tools/bazel:go_default_library

exports_files(["WORKSPACE"])

exports_files(
    ["package.bzl"],
    visibility = ["//cmd/sandboxfs:__pkg__"],
)

filegroup(
    name = "distdocs",
    srcs = [
        "AUTHORS",
        "CONTRIBUTING.md",
        "CONTRIBUTORS",
        "INSTALL.md",
        "LICENSE",
        "NEWS.md",
        "README.md",
    ],
    visibility = ["//admin/install:__pkg__"],
)
