licenses(["notice"])  # Apache License 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "github.com/bazelbuild/sandboxfs/integration",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "large",
    srcs = [
        "cli_test.go",
        "debug_test.go",
        "layout_test.go",
        "main_test.go",
        "nesting_test.go",
        "options_test.go",
        "profiling_test.go",
        "read_only_test.go",
        "read_write_test.go",
        "reconfiguration_test.go",
        "signal_test.go",
    ],
    args = [
        "--sandboxfs_binary=../$(location //cmd/sandboxfs)",
    ],
    data = [
        "//cmd/sandboxfs",
    ],
    importpath = "github.com/bazelbuild/sandboxfs/integration",
    library = ":go_default_library",
    deps = [
        "//integration/utils:go_default_library",
        "//internal/sandbox:go_default_library",
        "@org_bazil_fuse//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
