licenses(["notice"])  # Apache License 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["install.go"],
    importpath = "github.com/bazelbuild/sandboxfs/admin/install",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/shell:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_binary(
    name = "install",
    data = [
        "//:distdocs",
        "//cmd/sandboxfs",
        "//cmd/sandboxfs:manpage",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/bazelbuild/sandboxfs/admin/install",
    visibility = ["//visibility:public"],
)
