licenses(["notice"])  # Apache License 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "checks.go",
        "lint.go",
    ],
    importpath = "github.com/bazelbuild/sandboxfs/admin/lint",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/shell:go_default_library",
        "@com_github_bazelbuild_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_binary(
    name = "lint",
    data = [
        "//:WORKSPACE",
        "@com_github_bazelbuild_buildtools//buildifier",
        "@go_sdk//:bin/gofmt",
        "@golint//golint",
        "@io_bazel_rules_go//go/tools/gazelle/gazelle:gazelle",
    ],
    importpath = "github.com/bazelbuild/sandboxfs/admin/lint",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
