licenses(["notice"])  # Apache License 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "checks.go",
        "lint.go",
    ],
    importpath = "github.com/bazelbuild/sandboxfs/admin/lint",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/shell:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

go_binary(
    name = "lint",
    data = [
        "//:WORKSPACE",
        "@bazel_gazelle//cmd/gazelle",
        "@com_github_bazelbuild_buildtools//buildifier",
        "@go_sdk//:bin/gofmt",
        "@org_golang_x_lint//golint",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/bazelbuild/sandboxfs/admin/lint",
    visibility = ["//visibility:public"],
)
