licenses(["notice"])  # Apache License 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mapped_dir.go",
        "mapped_file.go",
        "mapped_symlink.go",
        "node.go",
        "root.go",
        "sandbox.go",
        "scaffold_dir.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "node_darwin.go",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "node_linux.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/bazelbuild/sandboxfs/internal/sandbox",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_bazil_fuse//:go_default_library",
        "@org_bazil_fuse//fs:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)
