licenses(["notice"])  # Apache License 2.0

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dir.go",
        "file.go",
        "node.go",
        "root.go",
        "sandbox.go",
        "symlink.go",
    ] + select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "node_darwin.go",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "node_linux.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "github.com/bazelbuild/sandboxfs/internal/sandbox",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_bazil_fuse//:go_default_library",
        "@org_bazil_fuse//fs:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["sandbox_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/bazelbuild/sandboxfs/internal/sandbox",
    deps = ["//integration/utils:go_default_library"],
)
