load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["shell.go"],
    importpath = "github.com/bazelbuild/sandboxfs/internal/shell",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["shell_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/bazelbuild/sandboxfs/internal/shell",
)
